parser/myparser.output
Grammar

    0 $accept: Procedure $end

    1 Procedure: PROCEDURE NAME '{' Decls Stmts '}'
    2          | PROCEDURE NAME '{' Decls Stmts

    3 Decls: Decls Decl ';'
    4      | Decl ';'
    5      | Decls Decl
    6      | Decl

    7 Decl: Type SpecList

    8 Type: INT
    9     | CHAR

   10 SpecList: SpecList ',' Spec
   11         | Spec

   12 Spec: NAME
   13     | NAME '[' Bounds ']'

   14 Bounds: Bounds ',' Bound
   15       | Bound

   16 Bound: NUMBER ':' NUMBER

   17 Stmts: Stmts Stmt
   18      | Stmt

   19 Stmt: Reference '=' Expr ';'
   20     | '{' Stmts '}'
   21     | IF '(' Bool ')' THEN Stmt
   22     | IF '(' Bool ')' THEN WithElse ELSE Stmt
   23     | WHILE '(' Bool ')' '{' Stmts '}'
   24     | FOR NAME '=' Expr TO Expr BY Expr '{' Stmts '}'
   25     | READ Reference ';'
   26     | WRITE Expr ';'
   27     | '{' '}'
   28     | '{' ';' '}'
   29     | Reference '=' Expr
   30     | NAME NAME ';'
   31     | IF '(' Bool ')' Stmt
   32     | error ';'

   33 WithElse: IF '(' Bool ')' THEN WithElse ELSE WithElse
   34         | Reference '=' Expr ';'
   35         | '{' Stmts '}'
   36         | WHILE '(' Bool ')' '{' Stmts '}'
   37         | FOR NAME '=' Expr TO Expr BY Expr '{' Stmts '}'
   38         | READ Reference ';'
   39         | WRITE Expr ';'
   40         | error ';'

   41 Bool: NOT OrTerm
   42     | OrTerm

   43 OrTerm: OrTerm OR AndTerm
   44       | AndTerm

   45 AndTerm: AndTerm AND RelExpr
   46        | RelExpr

   47 RelExpr: RelExpr LT Expr
   48        | RelExpr LE Expr
   49        | RelExpr EQ Expr
   50        | RelExpr NE Expr
   51        | RelExpr GE Expr
   52        | RelExpr GT Expr
   53        | Expr
   54        | RelExpr '=' Expr

   55 Expr: Expr '+' Term
   56     | Expr '-' Term
   57     | Term

   58 Term: Term '*' Factor
   59     | Term '/' Factor
   60     | Factor

   61 Factor: '(' Expr ')'
   62       | Reference
   63       | NUMBER
   64       | CHARCONST

   65 Reference: NAME
   66          | NAME '[' Exprs ']'

   67 Exprs: Expr ',' Exprs
   68      | Expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 21 22 23 31 33 36 61
')' (41) 21 22 23 31 33 36 61
'*' (42) 58
'+' (43) 55
',' (44) 10 14 67
'-' (45) 56
'/' (47) 59
':' (58) 16
';' (59) 3 4 19 25 26 28 30 32 34 38 39 40
'=' (61) 19 24 29 34 37 54
'[' (91) 13 66
']' (93) 13 66
'{' (123) 1 2 20 23 24 27 28 35 36 37
'}' (125) 1 20 23 24 27 28 35 36 37
error (256) 32 40
PROCEDURE (258) 1 2
INT (259) 8
CHAR (260) 9
WRITE (261) 26 39
READ (262) 25 38
AND (263) 45
OR (264) 43
NOT (265) 41
IF (266) 21 22 31 33
ELSE (267) 22 33
THEN (268) 21 22 33
FOR (269) 24 37
TO (270) 24 37
BY (271) 24 37
WHILE (272) 23 36
LT (273) 47
LE (274) 48
EQ (275) 49
NE (276) 50
GT (277) 52
GE (278) 51
NAME (279) 1 2 12 13 24 30 37 65 66
NUMBER (280) 16 63
CHARCONST (281) 64


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Procedure (42)
    on left: 1 2, on right: 0
Decls (43)
    on left: 3 4 5 6, on right: 1 2 3 5
Decl (44)
    on left: 7, on right: 3 4 5 6
Type (45)
    on left: 8 9, on right: 7
SpecList (46)
    on left: 10 11, on right: 7 10
Spec (47)
    on left: 12 13, on right: 10 11
Bounds (48)
    on left: 14 15, on right: 13 14
Bound (49)
    on left: 16, on right: 14 15
Stmts (50)
    on left: 17 18, on right: 1 2 17 20 23 24 35 36 37
Stmt (51)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32,
    on right: 17 18 21 22 31
WithElse (52)
    on left: 33 34 35 36 37 38 39 40, on right: 22 33
Bool (53)
    on left: 41 42, on right: 21 22 23 31 33 36
OrTerm (54)
    on left: 43 44, on right: 41 42 43
AndTerm (55)
    on left: 45 46, on right: 43 44 45
RelExpr (56)
    on left: 47 48 49 50 51 52 53 54, on right: 45 46 47 48 49 50 51
    52 54
Expr (57)
    on left: 55 56 57, on right: 19 24 26 29 34 37 39 47 48 49 50 51
    52 53 54 55 56 61 67 68
Term (58)
    on left: 58 59 60, on right: 55 56 57 58 59
Factor (59)
    on left: 61 62 63 64, on right: 58 59 60
Reference (60)
    on left: 65 66, on right: 19 25 29 34 38 62
Exprs (61)
    on left: 67 68, on right: 66 67


state 0

    0 $accept: . Procedure $end

    PROCEDURE  shift, and go to state 1

    Procedure  go to state 2


state 1

    1 Procedure: PROCEDURE . NAME '{' Decls Stmts '}'
    2          | PROCEDURE . NAME '{' Decls Stmts

    NAME  shift, and go to state 3


state 2

    0 $accept: Procedure . $end

    $end  shift, and go to state 4


state 3

    1 Procedure: PROCEDURE NAME . '{' Decls Stmts '}'
    2          | PROCEDURE NAME . '{' Decls Stmts

    '{'  shift, and go to state 5


state 4

    0 $accept: Procedure $end .

    $default  accept


state 5

    1 Procedure: PROCEDURE NAME '{' . Decls Stmts '}'
    2          | PROCEDURE NAME '{' . Decls Stmts

    INT   shift, and go to state 6
    CHAR  shift, and go to state 7

    Decls  go to state 8
    Decl   go to state 9
    Type   go to state 10


state 6

    8 Type: INT .

    $default  reduce using rule 8 (Type)


state 7

    9 Type: CHAR .

    $default  reduce using rule 9 (Type)


state 8

    1 Procedure: PROCEDURE NAME '{' Decls . Stmts '}'
    2          | PROCEDURE NAME '{' Decls . Stmts
    3 Decls: Decls . Decl ';'
    5      | Decls . Decl

    error  shift, and go to state 11
    INT    shift, and go to state 6
    CHAR   shift, and go to state 7
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18

    Decl       go to state 19
    Type       go to state 10
    Stmts      go to state 20
    Stmt       go to state 21
    Reference  go to state 22


state 9

    4 Decls: Decl . ';'
    6      | Decl .

    ';'  shift, and go to state 23

    $default  reduce using rule 6 (Decls)


state 10

    7 Decl: Type . SpecList

    NAME  shift, and go to state 24

    SpecList  go to state 25
    Spec      go to state 26


state 11

   32 Stmt: error . ';'

    ';'  shift, and go to state 27


state 12

   26 Stmt: WRITE . Expr ';'

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 32
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 13

   25 Stmt: READ . Reference ';'

    NAME  shift, and go to state 28

    Reference  go to state 36


state 14

   21 Stmt: IF . '(' Bool ')' THEN Stmt
   22     | IF . '(' Bool ')' THEN WithElse ELSE Stmt
   31     | IF . '(' Bool ')' Stmt

    '('  shift, and go to state 37


state 15

   24 Stmt: FOR . NAME '=' Expr TO Expr BY Expr '{' Stmts '}'

    NAME  shift, and go to state 38


state 16

   23 Stmt: WHILE . '(' Bool ')' '{' Stmts '}'

    '('  shift, and go to state 39


state 17

   30 Stmt: NAME . NAME ';'
   65 Reference: NAME .
   66          | NAME . '[' Exprs ']'

    NAME  shift, and go to state 40
    '['   shift, and go to state 41

    $default  reduce using rule 65 (Reference)


state 18

   20 Stmt: '{' . Stmts '}'
   27     | '{' . '}'
   28     | '{' . ';' '}'

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 42
    ';'    shift, and go to state 43

    Stmts      go to state 44
    Stmt       go to state 21
    Reference  go to state 22


state 19

    3 Decls: Decls Decl . ';'
    5      | Decls Decl .

    ';'  shift, and go to state 45

    $default  reduce using rule 5 (Decls)


state 20

    1 Procedure: PROCEDURE NAME '{' Decls Stmts . '}'
    2          | PROCEDURE NAME '{' Decls Stmts .
   17 Stmts: Stmts . Stmt

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 46

    $end  reduce using rule 2 (Procedure)

    Stmt       go to state 47
    Reference  go to state 22


state 21

   18 Stmts: Stmt .

    $default  reduce using rule 18 (Stmts)


state 22

   19 Stmt: Reference . '=' Expr ';'
   29     | Reference . '=' Expr

    '='  shift, and go to state 48


state 23

    4 Decls: Decl ';' .

    $default  reduce using rule 4 (Decls)


state 24

   12 Spec: NAME .
   13     | NAME . '[' Bounds ']'

    '['  shift, and go to state 49

    $default  reduce using rule 12 (Spec)


state 25

    7 Decl: Type SpecList .
   10 SpecList: SpecList . ',' Spec

    ','  shift, and go to state 50

    $default  reduce using rule 7 (Decl)


state 26

   11 SpecList: Spec .

    $default  reduce using rule 11 (SpecList)


state 27

   32 Stmt: error ';' .

    $default  reduce using rule 32 (Stmt)


state 28

   65 Reference: NAME .
   66          | NAME . '[' Exprs ']'

    '['  shift, and go to state 41

    $default  reduce using rule 65 (Reference)


state 29

   63 Factor: NUMBER .

    $default  reduce using rule 63 (Factor)


state 30

   64 Factor: CHARCONST .

    $default  reduce using rule 64 (Factor)


state 31

   61 Factor: '(' . Expr ')'

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 51
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 32

   26 Stmt: WRITE Expr . ';'
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    ';'  shift, and go to state 52
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54


state 33

   57 Expr: Term .
   58 Term: Term . '*' Factor
   59     | Term . '/' Factor

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 57 (Expr)


state 34

   60 Term: Factor .

    $default  reduce using rule 60 (Term)


state 35

   62 Factor: Reference .

    $default  reduce using rule 62 (Factor)


state 36

   25 Stmt: READ Reference . ';'

    ';'  shift, and go to state 57


state 37

   21 Stmt: IF '(' . Bool ')' THEN Stmt
   22     | IF '(' . Bool ')' THEN WithElse ELSE Stmt
   31     | IF '(' . Bool ')' Stmt

    NOT        shift, and go to state 58
    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Bool       go to state 59
    OrTerm     go to state 60
    AndTerm    go to state 61
    RelExpr    go to state 62
    Expr       go to state 63
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 38

   24 Stmt: FOR NAME . '=' Expr TO Expr BY Expr '{' Stmts '}'

    '='  shift, and go to state 64


state 39

   23 Stmt: WHILE '(' . Bool ')' '{' Stmts '}'

    NOT        shift, and go to state 58
    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Bool       go to state 65
    OrTerm     go to state 60
    AndTerm    go to state 61
    RelExpr    go to state 62
    Expr       go to state 63
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 40

   30 Stmt: NAME NAME . ';'

    ';'  shift, and go to state 66


state 41

   66 Reference: NAME '[' . Exprs ']'

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 67
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35
    Exprs      go to state 68


state 42

   27 Stmt: '{' '}' .

    $default  reduce using rule 27 (Stmt)


state 43

   28 Stmt: '{' ';' . '}'

    '}'  shift, and go to state 69


state 44

   17 Stmts: Stmts . Stmt
   20 Stmt: '{' Stmts . '}'

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 70

    Stmt       go to state 47
    Reference  go to state 22


state 45

    3 Decls: Decls Decl ';' .

    $default  reduce using rule 3 (Decls)


state 46

    1 Procedure: PROCEDURE NAME '{' Decls Stmts '}' .

    $default  reduce using rule 1 (Procedure)


state 47

   17 Stmts: Stmts Stmt .

    $default  reduce using rule 17 (Stmts)


state 48

   19 Stmt: Reference '=' . Expr ';'
   29     | Reference '=' . Expr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 71
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 49

   13 Spec: NAME '[' . Bounds ']'

    NUMBER  shift, and go to state 72

    Bounds  go to state 73
    Bound   go to state 74


state 50

   10 SpecList: SpecList ',' . Spec

    NAME  shift, and go to state 24

    Spec  go to state 75


state 51

   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term
   61 Factor: '(' Expr . ')'

    ')'  shift, and go to state 76
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54


state 52

   26 Stmt: WRITE Expr ';' .

    $default  reduce using rule 26 (Stmt)


state 53

   55 Expr: Expr '+' . Term

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Term       go to state 77
    Factor     go to state 34
    Reference  go to state 35


state 54

   56 Expr: Expr '-' . Term

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Term       go to state 78
    Factor     go to state 34
    Reference  go to state 35


state 55

   58 Term: Term '*' . Factor

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Factor     go to state 79
    Reference  go to state 35


state 56

   59 Term: Term '/' . Factor

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Factor     go to state 80
    Reference  go to state 35


state 57

   25 Stmt: READ Reference ';' .

    $default  reduce using rule 25 (Stmt)


state 58

   41 Bool: NOT . OrTerm

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    OrTerm     go to state 81
    AndTerm    go to state 61
    RelExpr    go to state 62
    Expr       go to state 63
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 59

   21 Stmt: IF '(' Bool . ')' THEN Stmt
   22     | IF '(' Bool . ')' THEN WithElse ELSE Stmt
   31     | IF '(' Bool . ')' Stmt

    ')'  shift, and go to state 82


state 60

   42 Bool: OrTerm .
   43 OrTerm: OrTerm . OR AndTerm

    OR  shift, and go to state 83

    $default  reduce using rule 42 (Bool)


state 61

   44 OrTerm: AndTerm .
   45 AndTerm: AndTerm . AND RelExpr

    AND  shift, and go to state 84

    $default  reduce using rule 44 (OrTerm)


state 62

   46 AndTerm: RelExpr .
   47 RelExpr: RelExpr . LT Expr
   48        | RelExpr . LE Expr
   49        | RelExpr . EQ Expr
   50        | RelExpr . NE Expr
   51        | RelExpr . GE Expr
   52        | RelExpr . GT Expr
   54        | RelExpr . '=' Expr

    LT   shift, and go to state 85
    LE   shift, and go to state 86
    EQ   shift, and go to state 87
    NE   shift, and go to state 88
    GT   shift, and go to state 89
    GE   shift, and go to state 90
    '='  shift, and go to state 91

    $default  reduce using rule 46 (AndTerm)


state 63

   53 RelExpr: Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 53 (RelExpr)


state 64

   24 Stmt: FOR NAME '=' . Expr TO Expr BY Expr '{' Stmts '}'

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 92
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 65

   23 Stmt: WHILE '(' Bool . ')' '{' Stmts '}'

    ')'  shift, and go to state 93


state 66

   30 Stmt: NAME NAME ';' .

    $default  reduce using rule 30 (Stmt)


state 67

   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term
   67 Exprs: Expr . ',' Exprs
   68      | Expr .

    ','  shift, and go to state 94
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 68 (Exprs)


state 68

   66 Reference: NAME '[' Exprs . ']'

    ']'  shift, and go to state 95


state 69

   28 Stmt: '{' ';' '}' .

    $default  reduce using rule 28 (Stmt)


state 70

   20 Stmt: '{' Stmts '}' .

    $default  reduce using rule 20 (Stmt)


state 71

   19 Stmt: Reference '=' Expr . ';'
   29     | Reference '=' Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    ';'  shift, and go to state 96
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 29 (Stmt)


state 72

   16 Bound: NUMBER . ':' NUMBER

    ':'  shift, and go to state 97


state 73

   13 Spec: NAME '[' Bounds . ']'
   14 Bounds: Bounds . ',' Bound

    ','  shift, and go to state 98
    ']'  shift, and go to state 99


state 74

   15 Bounds: Bound .

    $default  reduce using rule 15 (Bounds)


state 75

   10 SpecList: SpecList ',' Spec .

    $default  reduce using rule 10 (SpecList)


state 76

   61 Factor: '(' Expr ')' .

    $default  reduce using rule 61 (Factor)


state 77

   55 Expr: Expr '+' Term .
   58 Term: Term . '*' Factor
   59     | Term . '/' Factor

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 55 (Expr)


state 78

   56 Expr: Expr '-' Term .
   58 Term: Term . '*' Factor
   59     | Term . '/' Factor

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 56 (Expr)


state 79

   58 Term: Term '*' Factor .

    $default  reduce using rule 58 (Term)


state 80

   59 Term: Term '/' Factor .

    $default  reduce using rule 59 (Term)


state 81

   41 Bool: NOT OrTerm .
   43 OrTerm: OrTerm . OR AndTerm

    OR  shift, and go to state 83

    $default  reduce using rule 41 (Bool)


state 82

   21 Stmt: IF '(' Bool ')' . THEN Stmt
   22     | IF '(' Bool ')' . THEN WithElse ELSE Stmt
   31     | IF '(' Bool ')' . Stmt

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    THEN   shift, and go to state 100
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18

    Stmt       go to state 101
    Reference  go to state 22


state 83

   43 OrTerm: OrTerm OR . AndTerm

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    AndTerm    go to state 102
    RelExpr    go to state 62
    Expr       go to state 63
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 84

   45 AndTerm: AndTerm AND . RelExpr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    RelExpr    go to state 103
    Expr       go to state 63
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 85

   47 RelExpr: RelExpr LT . Expr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 104
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 86

   48 RelExpr: RelExpr LE . Expr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 105
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 87

   49 RelExpr: RelExpr EQ . Expr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 106
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 88

   50 RelExpr: RelExpr NE . Expr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 107
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 89

   52 RelExpr: RelExpr GT . Expr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 108
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 90

   51 RelExpr: RelExpr GE . Expr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 109
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 91

   54 RelExpr: RelExpr '=' . Expr

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 110
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 92

   24 Stmt: FOR NAME '=' Expr . TO Expr BY Expr '{' Stmts '}'
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    TO   shift, and go to state 111
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54


state 93

   23 Stmt: WHILE '(' Bool ')' . '{' Stmts '}'

    '{'  shift, and go to state 112


state 94

   67 Exprs: Expr ',' . Exprs

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 67
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35
    Exprs      go to state 113


state 95

   66 Reference: NAME '[' Exprs ']' .

    $default  reduce using rule 66 (Reference)


state 96

   19 Stmt: Reference '=' Expr ';' .

    $default  reduce using rule 19 (Stmt)


state 97

   16 Bound: NUMBER ':' . NUMBER

    NUMBER  shift, and go to state 114


state 98

   14 Bounds: Bounds ',' . Bound

    NUMBER  shift, and go to state 72

    Bound  go to state 115


state 99

   13 Spec: NAME '[' Bounds ']' .

    $default  reduce using rule 13 (Spec)


state 100

   21 Stmt: IF '(' Bool ')' THEN . Stmt
   22     | IF '(' Bool ')' THEN . WithElse ELSE Stmt

    error  shift, and go to state 116
    WRITE  shift, and go to state 117
    READ   shift, and go to state 118
    IF     shift, and go to state 119
    FOR    shift, and go to state 120
    WHILE  shift, and go to state 121
    NAME   shift, and go to state 17
    '{'    shift, and go to state 122

    Stmt       go to state 123
    WithElse   go to state 124
    Reference  go to state 125


state 101

   31 Stmt: IF '(' Bool ')' Stmt .

    $default  reduce using rule 31 (Stmt)


state 102

   43 OrTerm: OrTerm OR AndTerm .
   45 AndTerm: AndTerm . AND RelExpr

    AND  shift, and go to state 84

    $default  reduce using rule 43 (OrTerm)


state 103

   45 AndTerm: AndTerm AND RelExpr .
   47 RelExpr: RelExpr . LT Expr
   48        | RelExpr . LE Expr
   49        | RelExpr . EQ Expr
   50        | RelExpr . NE Expr
   51        | RelExpr . GE Expr
   52        | RelExpr . GT Expr
   54        | RelExpr . '=' Expr

    LT   shift, and go to state 85
    LE   shift, and go to state 86
    EQ   shift, and go to state 87
    NE   shift, and go to state 88
    GT   shift, and go to state 89
    GE   shift, and go to state 90
    '='  shift, and go to state 91

    $default  reduce using rule 45 (AndTerm)


state 104

   47 RelExpr: RelExpr LT Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 47 (RelExpr)


state 105

   48 RelExpr: RelExpr LE Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 48 (RelExpr)


state 106

   49 RelExpr: RelExpr EQ Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 49 (RelExpr)


state 107

   50 RelExpr: RelExpr NE Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 50 (RelExpr)


state 108

   52 RelExpr: RelExpr GT Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 52 (RelExpr)


state 109

   51 RelExpr: RelExpr GE Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 51 (RelExpr)


state 110

   54 RelExpr: RelExpr '=' Expr .
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54

    $default  reduce using rule 54 (RelExpr)


state 111

   24 Stmt: FOR NAME '=' Expr TO . Expr BY Expr '{' Stmts '}'

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 126
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 112

   23 Stmt: WHILE '(' Bool ')' '{' . Stmts '}'

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18

    Stmts      go to state 127
    Stmt       go to state 21
    Reference  go to state 22


state 113

   67 Exprs: Expr ',' Exprs .

    $default  reduce using rule 67 (Exprs)


state 114

   16 Bound: NUMBER ':' NUMBER .

    $default  reduce using rule 16 (Bound)


state 115

   14 Bounds: Bounds ',' Bound .

    $default  reduce using rule 14 (Bounds)


state 116

   32 Stmt: error . ';'
   40 WithElse: error . ';'

    ';'  shift, and go to state 128


state 117

   26 Stmt: WRITE . Expr ';'
   39 WithElse: WRITE . Expr ';'

    NAME       shift, and go to state 28
    NUMBER     shift, and go to state 29
    CHARCONST  shift, and go to state 30
    '('        shift, and go to state 31

    Expr       go to state 129
    Term       go to state 33
    Factor     go to state 34
    Reference  go to state 35


state 118

   25 Stmt: READ . Reference ';'
   38 WithElse: READ . Reference ';'

    NAME  shift, and go to state 28

    Reference  go to state 130


state 119

   21 Stmt: IF . '(' Bool ')' THEN Stmt
   22     | IF . '(' Bool ')' THEN WithElse ELSE Stmt
   31     | IF . '(' Bool ')' Stmt
   33 WithElse: IF . '(' Bool ')' THEN WithElse ELSE WithElse

    '('  shift, and go to state 131


state 120

   24 Stmt: FOR . NAME '=' Expr TO Expr BY Expr '{' Stmts '}'
   37 WithElse: FOR . NAME '=' Expr TO Expr BY Expr '{' Stmts '}'

    NAME  shift, and go to state 132


state 121

   23 Stmt: WHILE . '(' Bool ')' '{' Stmts '}'
   36 WithElse: WHILE . '(' Bool ')' '{' Stmts '}'

    '('  shift, and go to state 133


state 122

   20 Stmt: '{' . Stmts '}'
   27     | '{' . '}'
   28     | '{' . ';' '}'
   35 WithElse: '{' . Stmts '}'

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 42
    ';'    shift, and go to state 43

    Stmts      go to state 134
    Stmt       go to state 21
    Reference  go to state 22


state 123

   21 Stmt: IF '(' Bool ')' THEN Stmt .

    $default  reduce using rule 21 (Stmt)


state 124

   22 Stmt: IF '(' Bool ')' THEN WithElse . ELSE Stmt

    ELSE  shift, and go to state 135


state 125

   19 Stmt: Reference . '=' Expr ';'
   29     | Reference . '=' Expr
   34 WithElse: Reference . '=' Expr ';'

    '='  shift, and go to state 136


state 126

   24 Stmt: FOR NAME '=' Expr TO Expr . BY Expr '{' Stmts '}'
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    BY   shift, and go to state 137
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54


state 127

   17 Stmts: Stmts . Stmt
   23 Stmt: WHILE '(' Bool ')' '{' Stmts . '}'

    error  shift, and go to state 11
    WRITE  shift, and go to state 12
    READ   shift, and go to state 13
    IF     shift, and go to state 14
    FOR    shift, and go to state 15
    WHILE  shift, and go to state 16
    NAME   shift, and go to state 17
    '{'    shift, and go to state 18
    '}'    shift, and go to state 138

    Stmt       go to state 47
    Reference  go to state 22


state 128

   32 Stmt: error ';' .
   40 WithElse: error ';' .

    ELSE      reduce using rule 40 (WithElse)
    $default  reduce using rule 32 (Stmt)


state 129

   26 Stmt: WRITE Expr . ';'
   39 WithElse: WRITE Expr . ';'
   55 Expr: Expr . '+' Term
   56     | Expr . '-' Term

    ';'  shift, and go to state 139
    '+'  shift, and go to state 53
    '-'  shift, and go to state 54


state 130
